Squashed 'PhreeqcRM/' changes from 95667e83..4d74c437
4d74c437 Merge commit 'caf28aaf1f79121433a330b3a88e11cef0d8b5dc'
caf28aaf Squashed 'src/' changes from 0696861f..26aa6771
a2af527e Bumped wheels version
1a6688e4 Merge pull request #168 from scharlton2/cibuildwheel-numpy-2
4e6efe61 Added conftest.py and constants.py to EXTRA_DIST
b46dba14 Undid refactoring of enum State
114fabc6 Added merge_wheels job
cf4a4532 Enabled all plats and python versions
8d13e68f Enabled all tests
c8ddb92f Added missing import
3157b1c6 Added setup code
2e05db21 Turned on stdout
9a3251db test_prereqs
61d8f649 More debug
fe1ceb8e Debugging
c714e5dc Updated constants.py
e0fbf526 Added variable to get yaml file path
b7e55e63 Debugging
988f9678 Added debugging
d196f982 debug cwd
81fca3dd Added prereqs to test_basic.py
fe6d6439 Check just windows
a4f0534b Missed a CIBW_TEST_REQUIRES
f7580195 Added phreeqc.dat and advect.pqi to swig/python test directory
d1aaa6ac Test tests directory
96c3dc27 Removed tests
157c989a Try modifying __init__.py
e50fb864 Removed tests
6abdb1ef Unguarded enum STATE test
c6e08c1f Quick test
cbd99bf6 Changed SWIGPYTHON to swig_python_EXPORTS
f47dca10 Turned off testing
fdcb7ab7 Try to set -fPIC for yaml-cpp build
dcc9dd72 Trying to fix -fPIC on ubuntu
98372dee Missed USE_YAML for PYTHON_TARGET_NAME
10df34a7 Fixed USE_YAML define for cibuildwheel/scikit-build
73567db7 Turned-off testing
c280192a Removed windows x64 cp313 exclusion
842767e3 Added cp313
72041396 Refactored enum State
7831fcde WIP: Added cp38
954fea96 WIP: Adding pytest tests
987206cd Add testing to cibuildwheel
7adf40e7 Merged CMakeListst.txt from scharlton/_fetch using: $ git checkout scharlton2/_fetch -- .\CMakeLists.txt
cdeda137 Try uncontrained numpy
cf66838a Test numpy>=2 in requires
d89f2dc1 Updated numpy contraints
c30da111 Enabled build wheels
5abc3d7e Bumped version and cleanup
dd90fce6 Added sdist
879ed4ec Fixed python exclude
6c858032 Disabled python=3.13 on windows
4bcd4f55 Set numpy<2
5c6fd3

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,114 +1,101 @@
 name: wheels
 
-on:
-  pull_request:
-    branches:
-      - master
-  push:
-    branches:
-      - master
-  workflow_dispatch:
-  release:
-    types:
-      - published
-
-env:
-  FORCE_COLOR: 3
-  YAML_CPP_REF: b8882652fcbeba4c00dec019a39da91e702e474e
-  USE_LIB_CMAKE_YAML_CPP: ${{ true }}
+on: [push, pull_request]
 
 jobs:
-  build:
-    name: ${{ matrix.os }} (python ${{ matrix.python-version }})
-
+  build_wheels:
+    name: ${{ matrix.python[0] }}(${{ matrix.buildplat[2] }}) on ${{ matrix.buildplat[0] }}
+    runs-on: ${{ matrix.buildplat[0] }}
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-13, ubuntu-20.04, ubuntu-22.04, windows-2019, windows-2022]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
-    runs-on: ${{ matrix.os }}
+        buildplat:
+          - [macos-13, macosx_x86_64, x86_64]
+          - [macos-14, macosx_arm64, arm64]
+          - [ubuntu-20.04, manylinux_x86_64, x86_64]
+          - [ubuntu-20.04, manylinux_i686, i686]
+          - [windows-2019, win_amd64, x64]
+          - [windows-2019, win32, Win32]
+        python:
+          - [cp38, v141]
+          - [cp39, v141]
+          - [cp310, v141]
+          - [cp311, v141]
+          - [cp312, v142]
+          - [cp313, v142]
+        exclude:
+          - buildplat: [windows-2019, win_amd64, x64]
+            python: [cp313, v142]
+          - buildplat: [windows-2019, win32, Win32]
+            python: [cp313, v142]
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          path: phreeqcrm-source
 
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Build wheels
+        if: ${{ runner.os != 'Windows' }}
+        uses: pypa/cibuildwheel@7e5a838a63ac8128d71ab2dfd99e4634dd1bca09  # v2.19.2
+        env:
+          CIBW_PRERELEASE_PYTHONS: True
+          CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_TEST_REQUIRES: pytest
+          # CIBW_BEFORE_TEST: pwd && ls -Ral && ls -Ral {project}/swig/python
+          CIBW_TEST_COMMAND: "pytest {project}/swig/python"
+
+      - name: Build wheels (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        uses: pypa/cibuildwheel@7e5a838a63ac8128d71ab2dfd99e4634dd1bca09  # v2.19.2
+        env:
+          CIBW_PRERELEASE_PYTHONS: True
+          CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_TEST_REQUIRES: pytest
+          # CIBW_BEFORE_TEST: pwd && ls -Ral && ls -Ral {project}/swig/python
+          CIBW_TEST_COMMAND: "pytest {project}/swig/python"
+          CMAKE_GENERATOR: Visual Studio 16 2019
+          CMAKE_GENERATOR_TOOLSET: ${{ matrix.python[1] }}
+          CMAKE_GENERATOR_PLATFORM: ${{ matrix.buildplat[2] }}
+
+      - uses: actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b # v4.3.4
+        with:
+          name: dist-${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
+          path: ./wheelhouse/*.whl
+
+
+  build_sdist:
+    name: Build sdist
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f # v5.1.1
         with:
-            repository: jbeder/yaml-cpp
-            ref: ${{ env.YAML_CPP_REF }}
-            path: yaml-cpp-source
-
-      - name: Install ninja (Linux)
-        if: ${{ runner.os == 'Linux' }}
-        run: sudo apt-get -y install ninja-build
-
-      - name: Install ninja (macOS)
-        if: ${{ runner.os == 'macOS' }}
-        run: brew install ninja
-
-      - name: Set up Visual Studio shell (Windows)
-        if: runner.os == 'Windows'
-        uses: egor-tensin/vs-shell@v2
-        with:
-          arch: x64
-
-      - name: Cache yaml-cpp
-        id: cache-yaml-cpp
-        uses: actions/cache@v4
-        with:
-          path: ${{ github.workspace }}/yaml-cpp-install
-          key: ${{ matrix.os }}-yaml-cpp-${{ env.YAML_CPP_REF }}
-
-      - name: Configure yaml-cpp
-        if: steps.cache-yaml-cpp.outputs.cache-hit != 'true'
-        run: cmake -G "Ninja Multi-Config" -B yaml-cpp-build -S yaml-cpp-source -DYAML_CPP_BUILD_TOOLS:BOOL=OFF -DCMAKE_INSTALL_PREFIX:PATH=$(pwd)/yaml-cpp-install -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-
-      - name: Build yaml-cpp
-        if: steps.cache-yaml-cpp.outputs.cache-hit != 'true'
-        run: cmake --build yaml-cpp-build --config Release
-
-      - name: Test yaml-cpp
-        if: steps.cache-yaml-cpp.outputs.cache-hit != 'true'
-        run: ctest --test-dir yaml-cpp-build
-
-      - name: Install yaml-cpp
-        if: steps.cache-yaml-cpp.outputs.cache-hit != 'true'
-        run: cmake --install yaml-cpp-build
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Python ${{ matrix.python-version }} dependencies
+          # Build sdist on lowest supported Python
+          python-version: "3.8"
+      - name: Build sdist
         run: |
-          python --version
-          python -m pip install --upgrade pip
-          pip install pipx
+          python -m pip install -U pip build
+          python -m build --sdist
 
-      - name: Build package (using share/cmake/yaml-cpp)
-        if: ${{ !env.USE_LIB_CMAKE_YAML_CPP }}
-        env:
-          yaml-cpp_DIR: ${{ github.workspace }}/yaml-cpp-install/share/cmake/yaml-cpp
-        working-directory: phreeqcrm-source
-        run: pipx run build
-
-      - name: Build package (using lib/cmake/yaml-cpp)
-        if: ${{ env.USE_LIB_CMAKE_YAML_CPP }}
-        env:
-          yaml-cpp_DIR: ${{ github.workspace }}/yaml-cpp-install/lib/cmake/yaml-cpp
-        working-directory: phreeqcrm-source
-        run: pipx run build
-
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b # v4.3.4
         with:
-          name: wheels-${{ matrix.os }}-python-${{ matrix.python-version }}
-          path: phreeqcrm-source/dist/*.whl
+          name: dist-sdist
+          path: ./dist/*
 
-      - uses: actions/upload-artifact@v4
-        if: ${{ matrix.python-version == '3.10' && matrix.os == 'ubuntu-22.04' }}
+
+  merge_wheels:
+    name: Merge wheels into a combined artifact
+    runs-on: ubuntu-latest
+    needs: [build_wheels, build_sdist]
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
         with:
-          name: source
-          path: phreeqcrm-source/dist/*.tar.gz
+          name: dist
+          pattern: dist-*
