Squashed 'PhreeqcRM/' changes from 4d74c437..2ba204d0
2ba204d0 Bumped version number
2fc76e4e Merge pull request #173 from dlparkhurst/module
fe6cb0a7 Updated to handle tuple
0319682f Merge branch 'usgs-coupled:master' into module
d0b66b96 Fixed one docstring. Added code to handle numpy arrays in yamlphreeqcrm.py. Modified WriteYAMLFile_py.py to test int, float of list, tuple, numpy.
fb8942a2 Merge pull request #171 from scharlton2/170-the-wheels-builds-should-set-phreeqcrm_use_zlib
54135ae0 Cleanup for zlib wheel build
9470a0ee WIP: zlibstatic lib added to skbuild
a4d4bc5b Set PHREEQCRM_USE_ZLIB when using scikit-build-core is used to build wheels

git-subtree-dir: PhreeqcRM
git-subtree-split: 2ba204d05d2de8b742b8d394699e5af85c2a2917

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,12 +48,23 @@ if(DEFINED SKBUILD)
   # Fetch yaml-cpp
   FetchContent_Declare(
     yaml-cpp
-    GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-    GIT_TAG yaml-cpp-0.7.0
+    URL https://github.com/jbeder/yaml-cpp/archive/refs/tags/yaml-cpp-0.7.0.tar.gz
   )
 
   # Make yaml-cpp available
   FetchContent_MakeAvailable(yaml-cpp)
+
+
+  # Fetch zlib
+  FetchContent_Declare(
+    zlib
+    URL https://github.com/madler/zlib/releases/download/v1.3.1/zlib-1.3.1.tar.gz
+  )
+
+  # Don't install zlib in wheel
+  set(SKIP_INSTALL_ALL ON)
+  # Make zlib available
+  FetchContent_MakeAvailable(zlib)
 endif()
 
 option(PHREEQCRM_WITH_YAML_CPP "Build with yaml-cpp support" OFF)
@@ -357,7 +368,11 @@ if(NOT ZLIB_ROOT)
   endif()
 endif()
 option(PHREEQCRM_USE_ZLIB "Use zlib compression for dump files" OFF)
-if(PHREEQCRM_USE_ZLIB)
+if(DEFINED SKBUILD)
+  # SKBUILD is defined when scikit-build-core is used to build python wheels (see pyproject.toml)
+  set(PHREEQCRM_USE_ZLIB ON)
+endif()
+if(PHREEQCRM_USE_ZLIB AND NOT DEFINED SKBUILD)
   find_package(ZLIB REQUIRED)
 endif()
 
@@ -365,6 +380,12 @@ if(PHREEQCRM_USE_ZLIB AND ZLIB_FOUND)
   target_compile_definitions(PhreeqcRM PRIVATE USE_GZ)
   target_link_libraries(PhreeqcRM PRIVATE ZLIB::ZLIB)
   string(APPEND exportPackageDependencies "find_dependency(ZLIB)\n")
+endif()
+if(DEFINED SKBUILD)
+  # SKBUILD is defined when scikit-build-core is used to build python wheels (see pyproject.toml)
+  target_compile_definitions(PhreeqcRM PRIVATE USE_GZ)
+  # for the wheel link to static zlib
+  target_link_libraries(PhreeqcRM PRIVATE zlibstatic)
 endif()
 
 # Allow user to override POSTFIX properties (but mandate them so that
@@ -600,6 +621,12 @@ if(DEFINED SKBUILD)
   message(STATUS "SKBUILD IS defined")
   #set_target_properties(PhreeqcRM TestRM TestBMIdtor TestRMdtor PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
   set_target_properties(PhreeqcRM PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
+  message(STATUS "SKIP_INSTALL_ALL=${SKIP_INSTALL_ALL}")
+  if (SKIP_INSTALL_ALL)
+    message(STATUS "SKIP_INSTALL_ALL TRUE")
+  else()
+    message(STATUS "SKIP_INSTALL_ALL TRUE")
+  endif()
 else()
   message(STATUS "SKBUILD is NOT defined")
 endif()
