Squashed 'PhreeqcRM/' changes from 4c6322d8..01fc8e11
01fc8e11 Merge commit 'cd0c17a5ea4d41b43bd6879bf389eeb6598b459d'
cd0c17a5 Squashed 'src/' changes from debb7100..826787cc
2e97cb5b Merge commit '5a7a1008d7e5fca344e99de1af13b77e6c3c58fa'
5a7a1008 Squashed 'database/' changes from 24d2c771..9e8d773e

git-subtree-dir: PhreeqcRM
git-subtree-split: 01fc8e1104e2b100999e1b8cced0ac3c3e94da6e

--- a/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Makefile.old
+++ b/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Makefile.old
@@ -4,7 +4,7 @@
 #	    Release
 #           Debug
 #
-# Serial verisons:   Release Debug
+# Serial versions:   Release Debug
 #
 # Makefile sets CFG variable, cd's to appropriate directory, runs Makefile recursively
 # Recursive make sets appropriate compiler, objects, options, libraries, and compiles PHREEQC
