--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,14 @@
 [build-system]
-requires = ["scikit-build-core", "swig", "numpy"]
+requires = [
+  "scikit-build-core",
+  "swig==4.2.1",
+  "numpy"
+]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "phreeqcrm"
-version = "0.0.11"
+version = "0.0.12"
 description = "A reaction module for transport simulators based on the geochemical model PHREEQC."
 readme = "README.md"
 requires-python = ">=3.8"
