Squashed 'PhreeqcRM/' changes from 8a3a3813..50def481
50def481 Set Python_SOABI to SKBUILD_SOABI (#186)

git-subtree-dir: PhreeqcRM
git-subtree-split: 50def4813a75b5aa3522a27e908dd0d9f07ee916

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,11 @@ if(PHREEQCRM_BUILD_PYTHON)
   # ie -DPython_ROOT_DIR=C:/Python38-x64
 endif()
 
+if(DEFINED SKBUILD)
+  # see https://scikit-build-core.readthedocs.io/en/latest/cmakelists.html
+  set(Python_SOABI ${SKBUILD_SOABI})
+endif()
+
 option(PHREEQCRM_NO_UTF8_ENCODING "Build without utf-8 encoding" OFF)
 
 set(PhreeqcRM_SOURCES
